2007-07-25  Alice Liu  <alice.liu@apple.com>

        Reviewed by .

        * mac/leopard/Skipped:
        Removing some tests that were removed earlier, but checked back 
        in accidentally.  Not sure how they got back into my file though. 

2007-07-25  Alice Liu  <alice.liu@apple.com>

        Reviewed by .

        * mac/leopard/Skipped:
        Adding to skip list to avoid false failure / Broken pipe.

2007-07-25  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim, Darin, Oliver.

        - <rdar://problem/5329440> REGRESSION: Clicking links with the feed:// protocol in Safari 3 does nothing
        - Tests that feed:// urls can still be followed when clicked.

        * http/tests/security/feed-urls-from-remote-expected.txt: Added.
        * http/tests/security/feed-urls-from-remote.html: Added.
        * http/tests/security/resources/feed.html: Added.
        * http/tests/security/resources/feed.xml: Added.

2007-07-25  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by .

        - Reverted

        * win/Skipped:

2007-07-25  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=14758
          REGRESSION: Repeated text after line break on facebook.com

        * fast/text/reset-emptyRun-expected.checksum: Added.
        * fast/text/reset-emptyRun-expected.png: Added.
        * fast/text/reset-emptyRun-expected.txt: Added.
        * fast/text/reset-emptyRun.html: Added.

2007-07-25  Kevin McCullough  <kmccullough@apple.com>

        * win/Skipped: Added feed-urls-from-remote.html since it requires a feature not
        yet implemented in the Windows version of DumpRenderTree.

2007-07-24  Brady Eidson <beidson@apple.com>

        Reviewed by Adam Roben

        <rdar://problem/5313504> - Some Back/Forward tests fail on Leopard

        * mac/leopard/Skipped: Remove from the skipped list as they work now

2007-07-24  Alice Liu  <alice.liu@apple.com>
