@@ -1,0 +1,5 @@
+<script>
+document.write('<script src="data:text/javascript,"></scri' +
+               'pt><script src="data:text/javascript, window.ranScript = true"></scri' + 
+               'pt>');
+</script>
